main/default/objects/Log_Index__c/Log_Index__c.object-meta.xml
<CustomObject>
    <label>Log Index</label>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>Log Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>