main/default/objects/Log_Index__c/fields/Bug_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Bug_Tracker__c</fullName>
    <label>Bug_Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>