main/default/objects/Log_Index__c/fields/Correct_Hash_Index__c.field-meta.xml
<CustomField>
    <fullName>Correct_Hash_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points from simple hash index (used by JobBatch) to correct stacktrace-based hash index. Enables deduplication when JobBatch runs after email/platform event has already created a log with correct hash.</description>
    <label>Correct Hash Index</label>
    <referenceTo>Log_Index__c</referenceTo>
    <relationshipLabel>Simple Hash Indexes</relationshipLabel>
    <relationshipName>Simple_Hash_Indexes</relationshipName>
    <type>Lookup</type>
</CustomField>