main/default/objects/Log_Index__c/fields/CV_Reported_to_Pharos_On__c.field-meta.xml
<CustomField>
    <fullName>CV_Reported_to_Pharos_On__c</fullName>
    <label>CV Reported to Pharos On</label>
    <type>DateTime</type>
</CustomField>