main/default/objects/Log_Index__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>