main/default/objects/Log_Index__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>