main/default/objects/Log_Index__c/fields/Reported_to_Pharos_On__c.field-meta.xml
<CustomField>
    <fullName>Reported_to_Pharos_On__c</fullName>
    <label>Reported to Pharos On</label>
    <type>DateTime</type>
</CustomField>