main/default/objects/Log_Index__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>